<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
    </parent>
    <groupId>com.platform</groupId>
    <artifactId>reference</artifactId>
    <version>0.0.1</version>

    <name>Reference Data Platform</name>

    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>server</module>
        <module>starter</module>
    </modules>

    <properties>
        <project.version>0.0.1</project.version>
        <java.version>25</java.version>

        <springdoc.version>3.0.0</springdoc.version> <!-- Nov 21, 2025 -->

        <hypersistence.version>3.14.0</hypersistence.version> <!-- Dec 16, 2025 -->
        <json.validator.version>2.0.0</json.validator.version> <!-- Oct 25, 2025 -->
        <jupiter.version>6.0.1</jupiter.version> <!-- Oct 31, 2025 -->

        <depclean-maven-plugin.version>2.1.0</depclean-maven-plugin.version> <!-- Jun 06, 2025 -->
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>io.hypersistence</groupId>
                <artifactId>hypersistence-utils-hibernate-71</artifactId>
                <version>${hypersistence.version}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>json-schema-validator</artifactId>
                <version>${json.validator.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${jupiter.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>se.kth.castor</groupId>
                <artifactId>depclean-maven-plugin</artifactId>
                <version>${depclean-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>depclean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>